# qfad

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  pyproject.toml  start.bat  tempCodeRunnerFile.bat
.claude/: settings.local.json
backend/: config.py  database.py  main.py
backend/analysis/: __init__.py  helpers.py  regression.py  var_model.py
backend/api/: analysis.py  data.py  macro.py  market.py  options.py  router.py  ws.py
backend/data/: seed_series.json
backend/models/: __init__.py  timeseries.py
backend/pipeline/: __init__.py  csv_store.py  export_excel.py  ingest_bea.py  ingest_bls.py  ingest_fred.py  ingest_market.py  scheduler.py
backend/pricing/: binomial.py  black_scholes.py  implied_vol.py  monte_carlo.py  utils.py
backend/schemas/: __init__.py  analysis.py  macro.py  market.py  options.py
backend/services/: __init__.py  bea_client.py  bls_client.py  excel_export.py  financial_statements.py  fred_client.py  market_data.py
config/: series.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: analysis.ts  client.ts  macro.ts  market.ts  options.ts  ws.ts
frontend/src/components/: ErrorBoundary.tsx  Layout.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: AnalysisResults.tsx  Dashboard.tsx  MacroIndicators.tsx  OptionsPricer.tsx  StockFinancials.tsx  (+1 more)
lib/: csv_store.py  fred_client.py
notebooks/: 01_data_overview.ipynb
r_analysis/: install_packages.R
results/: unemployment_inflation_analysis.py  unemployment_inflation_summary.md
scripts/: build_master_sheet.py  correlation.py  migrate_data.py  pull_fred.py  recession_analysis.py  run_pipeline.py  yield_curve.py
tests/: test_analysis.py  test_api.py  test_data_pipeline.py  test_pipeline.py  test_pricing.py
(+9 files in other folders)
